Fix mobile alignment of gin-sticky

--- a/styles/components/_regions.scss
+++ b/styles/components/_regions.scss
@@ -188,6 +188,10 @@ body:not(.toolbar-tray-open) .layout-container {
   }
 }
 
+.gin-sticky {
+  display: flex;
+}
+
 // Action bar
 .layout-region-node-secondary__actions {
   z-index: 102;
